--- a/APP/package.json
+++ b/APP/package.json
@@ -16,6 +16,7 @@
     "get-all-files": "^5.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "recharts": "^2.15.4",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
