--- a/APP/public/manifest.json
+++ b/APP/public/manifest.json
@@ -1,21 +1,19 @@
 {
-  "name": "ListItems",
-  "short_name": "ListItems",
-  "description": "App de ejemplo con soporte PWA.",
-  "start_url": ".",
+  "name": "BobinaVisor",
+  "short_name": "BobinaVisor",
+  "description": "App para revisar el estado de las bobinas.",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#2563eb",
+  "includeAssets": [
+    "public/favicon.svg",
+    "public/favicon.ico",
+    "public/apple-touch-icon.png"
+  ],
+
   "icons": [
-    {
-      "src": "/vite.svg",
-      "sizes": "192x192",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/vite.svg",
-      "sizes": "512x512",
-      "type": "image/svg+xml"
-    }
+    { "src": "pwa-192x192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "pwa-512x512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
